// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
package cratos.api.v1;
option go_package = "github.com/realotz/cratos/api/v1;v1";
option java_multiple_files = true;
option java_package = "com.github.api.kube.v1";
option java_outer_classname = "KubeProto";


message ObjectMeta {

  string name = 1;

  string generateName = 2;

  string namespace = 3;

  string selfLink = 4;

  string uid = 5;

  string resourceVersion = 6;

  int64 generation = 7;

  string creationTimestamp = 8;

  string deletionTimestamp = 9;

  int64 deletionGracePeriodSeconds = 10;

  map<string, string> labels = 11;

  map<string, string> annotations = 12;

  repeated OwnerReference ownerReferences = 13;

  repeated string finalizers = 14;

  string clusterName = 15;

  repeated ManagedFieldsEntry managedFields = 17;
}

message OwnerReference {
  string apiVersion = 5;
  string kind = 1;
  string name = 3;
  string uid = 4;
  bool controller = 6;
  bool blockOwnerDeletion = 7;
}

message FieldsV1 {
  bytes Raw = 1;
}

message ManagedFieldsEntry {
  string manager = 1;
  string operation = 2;
  string apiVersion = 3;
  string time = 4;
  string fieldsType = 6;
  FieldsV1 fieldsV1 = 7;
}
